# QtVSTemplate

./: .gitignore  CMakeLists.txt  Utils.cmake
globals/catch2/: CMakeLists.txt
models/SampleClass/: CMakeLists.txt  SampleClassExport.h  sampleclass.cpp  sampleclass.h
tests/: CMakeLists.txt  main.cpp  tst_sampletests.cpp
views/: CMakeLists.txt  mainwindow.ui
